# Davout

./: .gitignore  README.md  davout_installer.py  dummy_test.py  init_antigo.py  pyproject.toml  setup.py
CuboidGmsh/aa_tests/micropolar_meshes/: beam_micropolar_case_1.py
CuboidGmsh/aa_tests/periodic_meshes/: fiber_matrix_parameters.py
CuboidGmsh/aa_tests/solids/: whole_ensemble_of_geometries.py
CuboidGmsh/solids/: cuboid_cylinders.py  cuboid_ellipsoids.py  cuboid_generator.py  cuboid_helicoids.py  cuboid_prisms.py
CuboidGmsh/tool_box/: meshing_tools.py  region_finder.py  verification_tools.py
FENN/aa_tests/unidimensional/: bar_fea.py
MultiMech/0_tests/micropolar/tangent_operators/: numerical_differentiation.py
MultiMech/aa_tests/micropolar/: disc_micropolar_neo_hookean.py  stress_plots.py
MultiMech/aa_tests/micropolar/bending_case/: beam_with_fibers_macroscale.py  beam_with_fibers_microscale.py
MultiMech/aa_tests/micropolar/deformation_laboratory/: microscale_deformation_lab.py
MultiMech/aa_tests/micropolar/tangent_operators/: numerical_differentiation.py  numerical_differentiation_second_elasticity_tensor.py  tangent_operator_plotter.py
MultiMech/aa_tests/micropolar/torsion_case/: beam_with_fibers_macroscale.py  beam_with_fibers_microscale.py
MultiMech/aa_tests/multiscale/hyperelasticity/: beam_with_fibers_microscale.py
MultiMech/tool_box/: __init__.py  body_forces_loading_tools.py  boundary_conditions_tools.py  constitutive_tools.py  dirichlet_load_tools.py  file_handling_tools.py  functional_tools.py  homogenization_tools.py  mesh_handling_tools.py  multiscale_boundary_conditions_tools.py  numerical_tools.py  paraview_tools.py  plotting_tools.py  post_processing_tools.py  pseudotime_stepping_tools.py  surface_loading_tools.py  tensor_tools.py  variational_tools.py
logdir/: events.out.tfevents.1770236189.janczkowski.96120.0.v2  events.out.tfevents.1770239030.janczkowski.97697.0.v2  events.out.tfevents.1770239512.janczkowski.98342.0.v2
logdir/plugins/profile/2026_02_04_18_28_25/: janczkowski.xplane.pb
source/Davout/GraphUtilities/: collage_tools.py  paraview_tools.py  plotting_tools.py
source/Davout/LaTeXUtilities/: LaTeXUtilities.sty  templates.tex
source/Davout/PythonicUtilities/: collage_tools.py  coordinate_systems_tools.py  dictionary_tools.py  file_handling_tools.py  function_tools.py  numpy_tools.py  package_tools.py  path_tools.py  plotting_tools.py  programming_tools.py  recursion_tools.py  stochastic_tools.py  string_tools.py  tensor_and_math_tools.py  testing_tools.py  user_interaction_tools.py
source/Grante/: __init__.py
source/Grante/LaTeXUtilities/: LaTeXUtilities.sty  bibliographia.bib  templates.tex  templates_link.txt
source/Grante/PythonicUtilities/: dictionary_tools.py  function_tools.py  interpolation_tools.py  math_experiments.py  path_tools.py  plotting_tools.py  programming_tools.py  string_tools.py  tensor_tools.py
(+243 files in other folders)
