[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

# Version numbering convention (PEP 440)
#
# Format:
#   MAJOR.MINOR.PATCH[.devN | aN | bN | rcN]
#
# MAJOR:
#   Increased when incompatible API changes are introduced.
#   Example: 1.0.0 → 2.0.0
#
# MINOR:
#   Increased when new functionality is added in a backward-compatible way.
#   Example: 1.2.0 → 1.3.0
#
# PATCH:
#   Increased when backward-compatible bug fixes are made.
#   Example: 1.2.3 → 1.2.4
#
# Development releases:
#   .devN
#   Used for versions under active development before a release.
#   Example: 0.1.0.dev137
#
# Alpha releases:
#   aN
#   Early testing versions with incomplete features.
#   Example: 1.0.0a1
#
# Beta releases:
#   bN
#   Feature-complete but still under testing.
#   Example: 1.0.0b2
#
# Release candidates:
#   rcN
#   Final testing stage before the official release.
#   Example: 1.0.0rc1
#
# Final release:
#   MAJOR.MINOR.PATCH
#   Example: 1.0.0
#
# Post releases:
#   .postN
#   Minor corrections after a release (documentation, packaging fixes).
#   Example: 1.0.0.post1
#
# Local versions (rare):
#   +label
#   Used for build metadata or custom distributions.
#   Example: 1.0.0+cpu
#
# Example progression:
#   0.1.0.dev1
#   0.1.0.dev137
#   0.1.0a1
#   0.1.0b1
#   0.1.0rc1
#   0.1.0

[project]
name = "Davout"
version = "0.1.1.dev108"
description = "Scientific computing utilities combining FEM, ANN and tooling"
readme = "README.md"
authors = [
    { name = "Matheus Janczkowski", email = "matheusj2009@hotmail.com" }
]
license = "GPL-3.0-or-later"
requires-python = ">=3.10"

dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
]

classifiers = [
    "Programming Language :: Python :: 3"
]

[project.urls]
Homepage = "https://github.com/Matheus-Janczkowski/Davout"

[tool.setuptools]
package-dir = {"" = "source"}

[tool.setuptools.packages.find]
where = ["source"]

[tool.setuptools.package-data]
Davout = [
    "LaTeXUtilities/*.sty",
    "PythonicUtilities/fonts/*.ttf",
]